--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     min-height: 100vh;
     font-family: "Inter", sans-serif;
-
+    background-image: url(background.webp);
 }
 
 .background-card {
